# limxdynamics

./: .gitmodules  README.md  README_cn.md  simulator.py
humanoid-mujoco-sim/: README.md
humanoid-mujoco-sim/prebuild/etc/kinematic_projection/HU_D03_03/: twisted_right_ankle_model.yaml
humanoid-mujoco-sim/prebuild/etc/kinematic_projection/HU_D04_01/: config.yaml
humanoid-rl-deploy-cpp-main/: README.md  README_cn.md
humanoid-rl-deploy-cpp-main/src/humanoid-rl-deploy-cpp/robot_controllers/walking_controller/: CMakeLists.txt  package.xml
humanoid-rl-deploy-cpp-main/src/humanoid-rl-deploy-cpp/robot_controllers/walking_controller/include/: WalkingController.h
humanoid-rl-deploy-cpp-main/src/humanoid-rl-deploy-cpp/robot_controllers/walking_controller/src/: WalkingController.cpp
humanoid-rl-deploy-cpp-main/src/humanoid-rl-deploy-cpp/robot_hw/: robot_controllers.yaml
humanoid-rl-deploy-cpp-main/src/humanoid-rl-deploy-cpp/robot_joystick/src/: RobotJoystick.cpp
humanoid-rl-deploy-ros/: .gitmodules  README.md  README_cn.md
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_common/: CMakeLists.txt
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_common/include/robot_common/: types.h
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_common/include/robot_common/hardware_interface/: ContactSensorInterface.h  HybridJointInterface.h
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_controllers/: CMakeLists.txt  package.xml  robot_controllers_plugins.xml
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_controllers/config/humanoid_controllers/: controllers.yaml
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_controllers/config/humanoid_controllers/HU_D03_03/jointController/: joint_params.yaml
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_controllers/config/humanoid_controllers/HU_D04_01/: config.yaml
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_controllers/include/humanoid_controller/: ControllerBase.h  DampingHumanoidController.h  MimicHumanoidController.h  StandHumanoidController.h
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_controllers/src/humanoid_controller/: ControllerBase.cpp  DampingHumanoidController.cpp  MimicHumanoidController.cpp  StandHumanoidController.cpp
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_hw/: CMakeLists.txt  package.xml
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_hw/config/: HU_D03_03.yaml  HU_D04_01.yaml
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_hw/include/robot_hw/: HumanoidHW.h  RobotData.h  RobotHW.h  RobotHWLoop.h
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_hw/launch/: humanoid_hw.launch  humanoid_hw_sim.launch
humanoid-rl-deploy-ros/src/humanoid-rl-deploy-ros/robot_hw/src/: HumanoidHW.cpp  RobotHW.cpp  RobotHWLoop.cpp  humanoidNode.cpp
humanoid-rl-deploy-ros2/: README.md  README_cn.md
prebuild/etc/kinematic_projection/HU_D03_03/: twisted_left_ankle_model.yaml
